# e-controle

./: .babelrc  .dockerignore  .env.sample  .eslintrc.json  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  Vagrantfile  actstream.json  app.json  create_heroku_deployment.sh  db.dump  db_20190613.dump  docker-compose.yml  docker-entrypoint.sh  flunch_list.json  heroku.yml  latest.dump  latest.dump.gpg  manage.py  manage_dav.py  package-lock.json  package.json  poetry_req.txt  print_mime_types.py  pyproject.toml  requirements.txt  setup.cfg  uwsgi.ini  webpack.config.js
ad_authentication/: ad_backend.py  apps.py
adauth/: __init__.py  apps.py  auth.py
backoffice/: apps.py  tests.py  views.py
config/: __init__.py  api_views.py  apps.py
control/: __init__.py  admin.py  api_views.py  apps.py  copyQuestionFile.py  docx.py  export_response_files.py  models.py  permissions.py  questionnaire_duplicate.py  serializers.py  signals.py  upload_path.py  views.py
demo/: apps.py  views.py
deploy/: ecc-deploy-0.8.sh  ecc-deploy-extra.sh  ecc-deploy.sh  run_uwsgi.sh
docker/: Dockerfile.python
docs/: 1.15.md
e-controle-master/: Dockerfile  docker-entrypoint.sh  manage.py  requirements.txt
ecc/: .env  .env.sample  .settings.py.swp  __init__.py  admin.py  apps.py  celery.py  context_processors.py  manage.py  requirements.txt  settings.py  urls.py  views.py  wsgi.py
editor/: __init__.py  api_views.py  serializers.py  tests.py
faq/: __init__.py  admin.py  apps.py  models.py  views.py
heroku/: create_heroku_deployment.sh  init_database.sh
logs/: actions.py  (+3 more)
(+481 files in other folders)
