[tool.poetry]
name = "e-controle-develop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
Django = "2.2.13"
ipdb = "0.13.2"
django-debug-toolbar = "1.11"
psycopg2-binary = "2.8.5"
Jinja2 = "2.11.2"
django-model-utils = "4.0.0"
django-ordered-model = "3.4.1"
django-environ = "0.4.5"
pytest = "^4.6"
pytest-cov = "^2.0"
pytest-django = "3.9.0"
pytest-factoryboy = "2.0.3"
python-dotenv = "0.13.0"
django-annoying = "0.10.6"
django-sendfile = "0.3.11"
whitenoise = "5.1.0"
django-extensions = "2.2.9"
django-settings-export = "1.2.1"
djangorestframework = "3.11.2"
markdown = "3.1.1"
django-filter = "2.1.0"
django-celery-beat = "2.0.0"
Celery = "4.4.5"
redis = "3.5.3"
coreapi = "2.3.3"
django-cleanup = "5.0.0"
django-ckeditor = "5.9.0"
docxtpl = "0.10.0"
ldap3 = "2.7"
django-session-timeout = "0.1.0"
django-activity-stream = "0.9.0"
django-magicauth = "0.5"
django-admin = "2.0.1"
django-http-referrer-policy = "1.0.1"
django-feature-policy = "3.0.0"
django-csp = "3.6"
django-email-obfuscator = "0.1.5"
soft-delete = "0.2.2"
coverage = "^4.0"
pyasn1 = "0.4.8"
python-magic = "0.4.18"
xlsxwriter = "1.2.8"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]
python-dotenv = "0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
